# yandex_manager_stocks

./: .gitignore  .gitmodules  README.md  help_script.sh  main.py  pyproject.toml
