[tool.poetry]
name = "yandex-manager-stocks"
version = "0.1.0"
description = ""
authors = ["Artemio Panzini <panferovartemv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
telegram = "^0.0.1"
anyio = "^4.0.0"
certifi = "^2023.11.17"
charset-normalizer = "^3.3.2"
h11 = "^0.14.0"
httpcore = "^1.0.2"
httpx = "^0.25.1"
idna = "^3.4"
python-telegram-bot = "^20.6"
requests = "^2.31.0"
sniffio = "^1.3.0"
urllib3 = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
